@@ -24,14 +24,14 @@ It is designed
 and implemented by <a href="mailto:russgold@users.sourceforge.net">Russell Gold.</a></blockquote>
 
 <h2>Documentation</h2>
-<blockquote>A rudimentary <A HREF="doc/CookBook.html">User's manual</A> is available, as is 
+<blockquote>A rudimentary <A HREF="doc/Cookbook.html">User's manual</A> is available, as is 
 the <A HREF="doc/api/index.html">javadoc</A>.
 Several working example files come with the distribution download.</blockquote>
 
 <h2>Where do I get releases?</h2>
 <blockquote>The latest release of HttpUnit is available 
 <var:dist> from the <a href="http://httpunit.sourceforge.net"><var:dist> HttpUnit home page</A>
-<var:publish as a <a href="http://httpunit.sourceforge.net/releases/httpunit_<version>.zip"><var:publish zip file</A>
+<var:publish as a <a href="http://httpunit.sourceforge.net/httpunit_<version>.zip"><var:publish zip file</A>
 .</blockquote>
  
 <h2>How do I contribute, give feedback, fix bugs and so on?</h2>
@@ -43,7 +43,7 @@ the code.
 a cvs client, accessing the repository at <code>:pserver:anonymous@cvs.httpunit.sourceforge.net:/cvsroot/httpunit</code>.
 </ul>
 
-<hr><P><font size=-2>Hosted by
+<hr><P><font size=-2><var:publish Hosted by
 <IMG SRC="http://sourceforge.net/sflogo.php?group_id=6550&type=1"
 WIDTH="88" HEIGHT="31" BORDER="0" ALT="SourceForge Logo" NATURALSIZEFLAG="0"
 ALIGN="TOP"></font></p>
